# solar-rooftop-analyzer

./: .gitignore  DEPLOYMENT.md  LICENSE  MANUAL_DEPLOY.md  Readme.md  STREAMLIT_DEPLOYMENT.md  app.py  deploy.sh  model.ipynb  model_loader.py  pyproject.toml  requirements.txt  run-flask.sh  setup.sh  test_deployment.py
Example_images/: tile1_800_4400.tif  tile_4000_6000.tif  tile_4400_5200.tif
Flask/: README.md  dev_test.py  integration_test.py  main.py  model_loader.py  quick_start.py  requirements.txt  run_flask.py  server.py
Flask/templates/: base.html  index.html  results.html
