[project]
name = "solar-rooftop-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==2.3.3",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.99.6",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "werkzeug==2.3.7",
]
